#cmake_minimum_required(VERSION 3.29)
#include(GNUInstallDirs)
#if(NOT EXISTS "${CMAKE_SOURCE_DIR}/cmake")
#	file(MAKE_DIRECTORY "${CMAKE_SOURCE_DIR}/cmake")
#endif()
#list(APPEND CMAKE_MODULE_PAPTH ${CMAKE_CURRENT_LIST_DIR}/cmake)
# Add an interface library
#add_library(cutlassTH INTERFACE)
#target_sources(cutlassTH INTERFACE
#		FILE_SET HEADERS
#		BASE_DIRS ${CMAKE_CURRENT_LIST_DIR}
#		INTERFACE_INCLUDE_DIRECTORIES
#				$<BUILD_INTERFACE>:${CMAKE_CURRENT_LIST_DIR}
#				$<INSTALL_INTERFACE>:${CMAKE_INSTALL_INCLUDEDIR})

#install(TARGETS cutlassTH PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
#install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR} DESTINATION ${CMAKE_INSTALL_DIR}/include)


