cmake_minimum_required(VERSION 3.29)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
add_executable(my_cute_demo my_cute_demo.cu)
SET_TARGET_PROPERTIES(my_cute_demo PROPERTIES LINKER_LANGUAGE C17)
SET_TARGET_PROPERTIES(my_cute_demo PROPERTIES LINKER_LANGUAGE CUDA)
set_target_properties(my_cute_demo PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
target_include_directories(my_cute_demo INTERFACE "../include")
#target_link_directories(my_cute_demo PRIVATE "${CMAKE_SOURCE_DIR}/../lib")
